test/files/neg/bug696.check
bug696.scala:4: error: no implicit argument matching parameter type TypeUtil0.Type[Any] was found.
  as[Any](null);
  ^
one error found
